# brainhack-til-2023-lazythink

./: .gitignore  README.md
asr/: Makefile  environment.yaml  pyproject.toml  requirements.txt  setup.sh
asr/data/custom/: generate_dataset.py  process.py  source.txt  temp.csv
asr/data/test/: .gitignore  SampleSubmission_Advanced.csv  test_manifest.json  to_hf_dataset.py
asr/data/train/: to_hf_dataset.py  train_manifest.json  val_manifest.json
asr/error_analysis/: analysis.sh  error_val_manifest.json
asr/noteable_scripts/: model_training.py  setup.sh
asr/notebooks/: custom-audio-data-to-dataset.ipynb  data_exploration.ipynb  generate-custom-audio-data.ipynb  til-dataset-to-hf-dataset.ipynb  whisper.ipynb
asr/notebooks/20-May/: fine-tune-whisper-small-lora.ipynb  fine-tune-whisper-small.ipynb  whisper-eval.ipynb
asr/notebooks/21-May/: NVIDIA STT Fine Tune 21 May (1).ipynb
asr/notebooks/22-May/: NVIDIA STT Fine Tune 21 May (1).ipynb  NVIDIA STT Fine Tune 22 May.ipynb
asr/notebooks/28-May-Final/: asr_lazythink.ipynb
asr/scripts/: data_explorer.py
asr/submissions/: eval_submission.csv  eval_submission_nvidia_conformer_transducer_ft_02_normalised.csv  eval_submission_nvidia_conformer_transducer_ft_mixed_precision_02_normalised.csv  eval_submission_nvidia_conformer_transducer_ft_mixed_precision_02_normalised_denoise.csv  eval_submission_nvidia_stt.csv  eval_submission_whisper_small_zero_shot_defaultdecoding.csv
od/: .gitignore  Makefile  README.md  environment.yaml  main.ipynb  pyproject.toml
od/configs/: custom_transform.py
od/configs/faster_rcnn/: faster-rcnn_r50_fpn_1x_coco.py
od/data/: labels-test.json  labels-train.json  labels-val.json  labels.json
od/notebooks/: -1.export-data-to-market.ipynb  0.prepare-dataset.ipynb  1.baseline-model.ipynb  2.train-rtmdet.ipynb  3_inference_with_model.ipynb  4.error-analysis.ipynb  5.crop-test-results.ipynb  6.reid-detection.ipynb
od/scripts/: export-detected-image.py  install-mmdet.sh  yolo2coco.py
reid/: .gitignore  README.md  data_dist.ipynb  gen_suspect.ipynb  main.ipynb  main.py  pyproject.toml
reid/deep-person-reid/: .gitignore  experiment.ipynb  output_vis-osnet_1_ain-0.7983.csv  visualise.py
reid/lightly/: data.py
reid/scripts/: pull_dataset.sh
reid/src/: utils.py
reid/src_lightly/: data.py  filtered_val_data.json  train.py
(+6585 files in other folders)
