[tool.poetry]
name = "asr"
version = "0.1.0"
description = ""
authors = ["Tien-Cheng <tiencheng@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyaudio = "^0.2.13"
soundfile = "^0.12.1"
numpy = "^1.24.3"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
transformers = "^4.29.2"
datasets = "^2.12.0"
evaluate = "^0.4.0"
librosa = "^0.10.0.post2"
jiwer = "^3.0.1"
pandas = "^2.0.1"
peft = "^0.3.0"
bitsandbytes = "^0.38.1"
loralib = "^0.1.1"
wandb = "^0.15.3"


[tool.poetry2conda]
name = "brainhack-asr"

[tool.poetry.group.dev.dependencies]
poetry2conda = "^0.3.0"
ipykernel = "^6.23.1"
jupyterlab = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
