[tool.poetry]
name = "od"
version = "0.1.0"
description = ""
authors = ["Zhao Wu <wongzhaowu@gmail.com>, Grace Ng <gnecarg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
torchvision = "^0.15.2"
openmim = "^0.3.7"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"
poetry2conda = "^0.3.0"
jupyterlab = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
